public class Product {
    String name;
    String description;
    int price;
    int quantity;
    String createdBy;
    String modifiedBy;
    int createdTime;
    int modefiedTime;
    public Product(String name, String description, int price, int quantity, String createdBy, String modifiedBy) {
        this.name = name;
        this.description = description;
        this.price = price;
        this.quantity = quantity;
        this.createdBy = createdBy;
        this.modifiedBy = modifiedBy;
    }

    
}
